@@ -1,3 +1,8 @@
+2008-01-19  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* TypeRocks.cs: Handle nested types in IsGeneratedCode for all
+	framework versions.
+
 2008-01-18  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* TypeRocks.cs: Add [Get|Has]Method rocks from Andreas Noever. Mark
